...
            
            Spacer()
            
            NavigationLink {
                CreateGameView()
            } label: {
                FullWidthButton(text: "Create Game")
                    .padding(.horizontal)
            }
            .scaleEffect(createGameButtonPressed ? 0.9 : 1.0)
            .animation(.spring(), value: createGameButtonPressed)
            .simultaneousGesture(
                DragGesture(minimumDistance: 0.0)
...
