...
                        .foregroundStyle(.gray)
                        .padding(.top, 5)
                }
            }
            
            if preference == .all {
                Button("Add players") {
                    newPlayerSheetShowing = true
                }
                .padding(.top, 15)
            }
        }
    }
...
